@@ -1,4 +1,4 @@
-/* $Id: thread.h,v 1.12 1999-12-31 10:48:08 sandervl Exp $ */
+/* $Id: thread.h,v 1.13 2000-01-02 22:10:39 sandervl Exp $ */
 
 /*
  * Thread definitions
@@ -115,6 +115,7 @@ typedef struct _THDB
     MSG            msg;            // Used by message translation to store translated PM message (sent to win32 window proc in pmwindow.cpp)
     MSG            msgWCHAR;       // Used to store extra WM_CHAR message generated by TranslateMessage
     DWORD          pidDebuggee;    // process id of debuggee
+    DWORD          logfile;        // last FILE ptr used for logging (for exception handling in vfprintf)
 #endif
 } THDB;
 
